--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@
 <h4><strong>Visualizations</strong><h4>
 <ul>
   <li><a href="Visualization/keywordsgooglechart.html">Keywords</a></li>
+  <li><a href="Visualization/top10WordOcurrences.html">Word Ocurrences</a></li>
+  <li><a href="Visualization/top10Replies.html">Word Ocurrences</a></li>
 </ul>
