--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <ul>
   <li><a href="Visualization/keywordsgooglechart.html">Keywords</a></li>
   <li><a href="Visualization/top10WordOcurrences.html">Word Ocurrences</a></li>
-  <li><a href="Visualization/top10Replies.html">Word Ocurrences</a></li>
+  <li><a href="Visualization/top10Replies.html">Replies</a></li>
 </ul>
